[package]
name = "news-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = [] }
dotenv = { version = "0.15", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
shuttle-axum = { version = "0.45", features = [] }
shuttle-runtime = { version = "0.45", features = [] }
tokio= { version = "1.28", features = [] }
